syntax = "proto3";

package notification.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/yourusername/distributed-file-sharing/services/notification-service/pkg/pb/notification/v1";

// Notification service definition
service NotificationService {
  // Send a notification
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse);
  
  // Get notifications for a user
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
  
  // Get a specific notification
  rpc GetNotification(GetNotificationRequest) returns (GetNotificationResponse);
  
  // Mark notification as read
  rpc MarkAsRead(MarkAsReadRequest) returns (google.protobuf.Empty);
  
  // Mark all notifications as read
  rpc MarkAllAsRead(MarkAllAsReadRequest) returns (MarkAllAsReadResponse);
  
  // Delete a notification
  rpc DeleteNotification(DeleteNotificationRequest) returns (google.protobuf.Empty);
  
  // Get unread count
  rpc GetUnreadCount(GetUnreadCountRequest) returns (GetUnreadCountResponse);
  
  // Get user preferences
  rpc GetUserPreferences(GetUserPreferencesRequest) returns (GetUserPreferencesResponse);
  
  // Update user preferences
  rpc UpdateUserPreferences(UpdateUserPreferencesRequest) returns (google.protobuf.Empty);
  
  // Send test notification
  rpc SendTestNotification(SendTestNotificationRequest) returns (SendTestNotificationResponse);
  
  // Get templates
  rpc GetTemplates(GetTemplatesRequest) returns (GetTemplatesResponse);
  
  // Create template
  rpc CreateTemplate(CreateTemplateRequest) returns (google.protobuf.Empty);
  
  // Update template
  rpc UpdateTemplate(UpdateTemplateRequest) returns (google.protobuf.Empty);
  
  // Delete template
  rpc DeleteTemplate(DeleteTemplateRequest) returns (google.protobuf.Empty);
  
  // Get batch notifications
  rpc GetBatchNotifications(GetBatchNotificationsRequest) returns (GetBatchNotificationsResponse);
  
  // Get DLQ entries
  rpc GetDLQEntries(GetDLQEntriesRequest) returns (GetDLQEntriesResponse);
  
  // Retry DLQ entry
  rpc RetryDLQEntry(RetryDLQEntryRequest) returns (google.protobuf.Empty);
  
  // Delete DLQ entry
  rpc DeleteDLQEntry(DeleteDLQEntryRequest) returns (google.protobuf.Empty);
  
  // Get statistics
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
  
  // Health check
  rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse);
}

// Enums
enum NotificationStatus {
  NOTIFICATION_STATUS_UNSPECIFIED = 0;
  NOTIFICATION_STATUS_PENDING = 1;
  NOTIFICATION_STATUS_SENT = 2;
  NOTIFICATION_STATUS_FAILED = 3;
  NOTIFICATION_STATUS_READ = 4;
}

enum NotificationChannel {
  NOTIFICATION_CHANNEL_UNSPECIFIED = 0;
  NOTIFICATION_CHANNEL_EMAIL = 1;
  NOTIFICATION_CHANNEL_SMS = 2;
  NOTIFICATION_CHANNEL_PUSH = 3;
  NOTIFICATION_CHANNEL_INAPP = 4;
  NOTIFICATION_CHANNEL_WEBSOCKET = 5;
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_FILE_UPLOADED = 1;
  EVENT_TYPE_FILE_UPLOAD_FAILED = 2;
  EVENT_TYPE_FILE_DELETED = 3;
  EVENT_TYPE_FILE_SHARED = 4;
  EVENT_TYPE_QUOTA_WARNING_80 = 5;
  EVENT_TYPE_QUOTA_WARNING_90 = 6;
  EVENT_TYPE_QUOTA_EXCEEDED = 7;
  EVENT_TYPE_SECURITY_ALERT = 8;
  EVENT_TYPE_SYSTEM_MAINTENANCE = 9;
}

enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  PRIORITY_LOW = 1;
  PRIORITY_NORMAL = 2;
  PRIORITY_HIGH = 3;
  PRIORITY_CRITICAL = 4;
}

// Message types
message Notification {
  string id = 1;
  string user_id = 2;
  EventType event_type = 3;
  NotificationChannel channel = 4;
  string title = 5;
  string message = 6;
  NotificationStatus status = 7;
  Priority priority = 8;
  string template_id = 9;
  map<string, string> metadata = 10;
  google.protobuf.Timestamp sent_at = 11;
  google.protobuf.Timestamp read_at = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
  int32 retry_count = 15;
  google.protobuf.Timestamp last_retry_at = 16;
  google.protobuf.Timestamp next_retry_at = 17;
  string error_reason = 18;
}

message UserNotificationPreferences {
  string id = 1;
  string user_id = 2;
  bool email_enabled = 3;
  bool sms_enabled = 4;
  bool push_enabled = 5;
  bool in_app_enabled = 6;
  bool websocket_enabled = 7;
  string email = 8;
  string phone_number = 9;
  string push_token = 10;
  string quiet_hours_start = 11;
  string quiet_hours_end = 12;
  bool quiet_hours_enabled = 13;
  repeated EventType event_subscriptions = 14;
  map<string, ChannelPriorities> channel_priorities = 15;
  google.protobuf.Timestamp created_at = 16;
  google.protobuf.Timestamp updated_at = 17;
}

message ChannelPriorities {
  repeated NotificationChannel channels = 1;
}

message NotificationTemplate {
  string id = 1;
  string template_id = 2;
  EventType event_type = 3;
  NotificationChannel channel = 4;
  string subject_template = 5;
  string body_template = 6;
  bool is_active = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message BatchNotification {
  string id = 1;
  string user_id = 2;
  EventType event_type = 3;
  NotificationChannel channel = 4;
  string title = 5;
  string message = 6;
  int32 count = 7;
  repeated BatchItem items = 8;
  NotificationStatus status = 9;
  google.protobuf.Timestamp sent_at = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message BatchItem {
  string file_name = 1;
  int64 file_size = 2;
  bool success = 3;
  string error_reason = 4;
  map<string, string> metadata = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message DeadLetterQueueEntry {
  string id = 1;
  map<string, string> original_event = 2;
  string notification_id = 3;
  string user_id = 4;
  EventType event_type = 5;
  string failure_reason = 6;
  repeated RetryAttempt retry_history = 7;
  int32 max_retries = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp last_retry_at = 10;
  google.protobuf.Timestamp next_retry_at = 11;
  bool is_processed = 12;
  google.protobuf.Timestamp processed_at = 13;
}

message RetryAttempt {
  google.protobuf.Timestamp attempted_at = 1;
  bool success = 2;
  string error_reason = 3;
  int64 duration_ms = 4;
}

// Request/Response messages
message SendNotificationRequest {
  string user_id = 1;
  EventType event_type = 2;
  NotificationChannel channel = 3;
  string title = 4;
  string message = 5;
  Priority priority = 6;
  string template_id = 7;
  map<string, string> metadata = 8;
  bool bypass_batching = 9;
  bool bypass_quiet_hours = 10;
}

message SendNotificationResponse {
  string id = 1;
  NotificationStatus status = 2;
  NotificationChannel channel = 3;
  google.protobuf.Timestamp sent_at = 4;
  string error = 5;
  int64 duration_ms = 6;
}

message GetNotificationsRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
  NotificationStatus status = 4;
  EventType event_type = 5;
}

message GetNotificationsResponse {
  repeated Notification notifications = 1;
  Pagination pagination = 2;
}

message GetNotificationRequest {
  string notification_id = 1;
  string user_id = 2;
}

message GetNotificationResponse {
  Notification notification = 1;
}

message MarkAsReadRequest {
  string notification_id = 1;
  string user_id = 2;
}

message MarkAllAsReadRequest {
  string user_id = 1;
}

message MarkAllAsReadResponse {
  int64 count = 1;
}

message DeleteNotificationRequest {
  string notification_id = 1;
  string user_id = 2;
}

message GetUnreadCountRequest {
  string user_id = 1;
}

message GetUnreadCountResponse {
  int64 count = 1;
}

message GetUserPreferencesRequest {
  string user_id = 1;
}

message GetUserPreferencesResponse {
  UserNotificationPreferences preferences = 1;
}

message UpdateUserPreferencesRequest {
  string user_id = 1;
  UserNotificationPreferences preferences = 2;
}

message SendTestNotificationRequest {
  string user_id = 1;
  NotificationChannel channel = 2;
}

message SendTestNotificationResponse {
  string message = 1;
  SendNotificationResponse response = 2;
}

message GetTemplatesRequest {
  int32 page = 1;
  int32 limit = 2;
  EventType event_type = 3;
  NotificationChannel channel = 4;
}

message GetTemplatesResponse {
  repeated NotificationTemplate templates = 1;
  Pagination pagination = 2;
}

message CreateTemplateRequest {
  NotificationTemplate template = 1;
}

message UpdateTemplateRequest {
  string template_id = 1;
  NotificationTemplate template = 2;
}

message DeleteTemplateRequest {
  string template_id = 1;
}

message GetBatchNotificationsRequest {
  string user_id = 1;
  int32 page = 2;
  int32 limit = 3;
  NotificationStatus status = 4;
}

message GetBatchNotificationsResponse {
  repeated BatchNotification batches = 1;
  Pagination pagination = 2;
}

message GetDLQEntriesRequest {
  int32 page = 1;
  int32 limit = 2;
  bool processed = 3;
}

message GetDLQEntriesResponse {
  repeated DeadLetterQueueEntry entries = 1;
  Pagination pagination = 2;
}

message RetryDLQEntryRequest {
  string dlq_id = 1;
}

message DeleteDLQEntryRequest {
  string dlq_id = 1;
}

message GetStatsRequest {
  string user_id = 1;
  string start_date = 2;
  string end_date = 3;
}

message GetStatsResponse {
  map<string, int64> notifications = 1;
  map<string, int64> batches = 2;
  map<string, int64> dlq = 3;
  DateRange period = 4;
}

message DateRange {
  string start_date = 1;
  string end_date = 2;
}

message Pagination {
  int32 page = 1;
  int32 limit = 2;
  int64 total = 3;
  int64 total_pages = 4;
}

message HealthCheckResponse {
  string status = 1;
  string service = 2;
  google.protobuf.Timestamp timestamp = 3;
  map<string, string> config = 4;
  map<string, HandlerHealth> handlers = 5;
}

message HandlerHealth {
  bool enabled = 1;
  string status = 2;
  string error = 3;
}